@@ -1,3 +1,6 @@
+  - New exportable span() function which universally constructs a span
+    from a SecretBuffer, Span object, or plain scalar.
+
 Version 0.017 - 2025-12-28
   - New features for append_console_line: char_mask, char_count, char_class
   - New attribute 'line_input' for ConsoleState toggles line buffering
